fix body gutter on mobile

--- a/styles/_trumps.ektron-fixes.less
+++ b/styles/_trumps.ektron-fixes.less
@@ -13,6 +13,10 @@
 // ////////////////////////////////////////////////////////////////////////////
 
 
+body {
+  padding-left: 0;  // override Ektron body on mobile
+  padding-right: 0; // override Ektron body on mobile
+}
 ul.pb-dz-control-column-ul {
   margin-bottom: 0;
 }
